--- a/_includes/category.html
+++ b/_includes/category.html
@@ -65,6 +65,6 @@ $(function(){
             </li>
             {% endfor %}
         </ul>
-        {% include pagination.html %}
+        #{% include pagination.html %}
     </div>
 </div>
