--- a/_includes/sections/links.html
+++ b/_includes/sections/links.html
@@ -2,7 +2,7 @@
     <div class="row m-b-lg">
         <div class="col-lg-12 text-center">
             <div class="navy-line"></div>
-            <h1><span data-i18n="link.link">Link</span></h1>
+            <h1><span data-i18n="link.link">Links</span></h1>
         </div>
     </div>
     <div class="row">
@@ -21,10 +21,12 @@
             <h4><span class="navy">{{ link.last_name }}</span> {{ link.first_name }}</h4>
             <p>{{ link.desc }}</p>
             <ul class="list-inline social-icon">
-                <li><a href="{{ link.website }}" target="blank"><i class="fa fa-link"></i></a>
+                <li><a href="{{ link.website }}" target="blank">{% if link.icon %}<i class="fa {{ link.icon }}"></i>{% else %}<i class="fa fa-link"></i>{% endif %}</a>
                 </li>
+                {% if {{link.email}} %}
                 <li><a href="mailto:{{ link.email }}"><i class="fa fa-envelope-o"></i></a>
                 </li>
+                {% endif %}
             </ul>
         </div>
         </div>
