--- a/_includes/sections/publications.html
+++ b/_includes/sections/publications.html
@@ -2,7 +2,7 @@
     <div class="row m-b-lg">
         <div class="col-lg-12 text-center">
             <div class="navy-line"></div>
-            <h1><span data-i18n="publications.my_publications">My Publications</span></h1>
+            <h1><span data-i18n="publications.my_publications">Recent Publications</span></h1>
         </div>
     </div>
     <div class="row">
@@ -17,12 +17,14 @@
             {% else %}
             <div class="col-sm-6 wow {% if loopindex == 1 %} fadeInLeft {% else %} fadeInRight {% endif %}">
             {% endif %}
+            {% if forloop.index < 5 %}
               <div class="team-member">
                   {% if {{publication.type}} == 'journal' %}
                     {{publication.authors}} ({{publication.year}}). {{publication.name}}, <i>{{publication.outlet}}, {{publication.volume}}</i>{% if publication.issue%} ({{publication.issue}}){% endif %}, {{publication.pages}}. <a target="_blank" href="https://doi.org/{{ publication.doi }}">doi: {{publication.doi}}</a>
                   {% elsif {{publication.type}} == 'proceedings' %}
                     {{publication.authors}} ({{publication.year}}). {{publication.name}}. In <i>{{publication.outlet}}</i>, {{publication.location}}.
                   {% endif%}
+            {% endif %}
   
 				<p><span data-i18n="publications.{{ publication.i18n }}">{{ publication.desc }}</span></p>
                   
