--- a/_includes/sections/publications.html
+++ b/_includes/sections/publications.html
@@ -32,5 +32,13 @@
           </div>
       {% endfor %}
     </div>
+
+    <div class="row">
+        <div class="col-lg-12 text-center wow zoomIn" id="i18_blog">
+            <a class="btn btn-lg btn-default btn-rounded btn-outline wow bounceIn" href="{{ "/publications/" | prepend: site.baseurl }}"><span data-i18n="blog.my_blog">More...</span></a>
+            <div style="height: 20px;"></div>
+        </div>
+    </div>
+
 </div>
 <br>
