--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -46,7 +46,11 @@
                 </ul>
             </div>
             <div class="text-center">
-                <a href="https://orcid.org/0000-0002-6133-8756" target="blank"><img src="{{ site.img_path_index }}/ORCIDiD_icon.png" width="25" height="25"></a>
+                <ul class="list-inline">
+                    <li><a href="https://orcid.org/0000-0002-6133-8756" target="blank" title="ORCID"><img src="{{ site.img_path_index }}/ORCIDiD_icon.png" width="25" height="25"></a></li>
+                    <script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
+                    <li><a href="https://www.researchgate.net/profile/Matthias_Franken" target="blank" title="ResearchGate"><span class="iconify" style="vertical-align: middle" data-icon="fa-brands:researchgate" width="25"></span></a></li>
+                </ul>
             </div>
         </div>
         <!-- second two icons -->
