social icons added

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
 <div class="container" id="i18_about_me">
     <div class="row m-b-lg">
         <div class="col-lg-12 text-center">
@@ -47,9 +48,10 @@
             </div>
             <div class="text-center">
                 <ul class="list-inline">
-                    <li><a href="https://orcid.org/0000-0002-6133-8756" target="blank" title="ORCID"><img src="{{ site.img_path_index }}/ORCIDiD_icon.png" width="25" height="25"></a></li>
-                    <script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
-                    <li><a href="https://www.researchgate.net/profile/Matthias_Franken" target="blank" title="ResearchGate"><span class="iconify" style="vertical-align: middle" data-icon="fa-brands:researchgate" width="25"></span></a></li>
+                    <li><a href="https://osf.io/pa6ku/" target="blank" title="OSF"><i class="ai ai-osf ai-2x" style="vertical-align: middle"></i></a></li>
+                    <li><a href="https://orcid.org/0000-0002-6133-8756" target="blank" title="ORCID"><i class="ai ai-orcid ai-2x" style="vertical-align: middle"></i></a></li>
+                    <li><a href="https://www.researchgate.net/profile/Matthias_Franken" target="blank" title="ResearchGate"><i class="ai ai-researchgate ai-2x" style="vertical-align: middle;"></i></a></li>
+                    <li><a href="https://scholar.google.be/citations?user=W8RcfMMAAAAJ&hl=en&oi=ao" target="blank" title="Google Scholar"><i class="ai ai-google-scholar ai-2x" style="vertical-align: middle;"></i></a></li>
                 </ul>
             </div>
         </div>
