--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -33,9 +33,6 @@
                     {% if site.author.facebook_username %}
                     <li><a href="https://www.facebook.com/{{ site.author.facebook_username }}" target="blank"><i class="fa fa-facebook"></i></a></li>
                     {% endif %}
-					{% if site.author.publons %}
-                    <li><a href="https://publons.com/researcher/{{ site.author.publons }}" target="blank"><i class="ai ai-publons"></i></a></li>
-                    {% endif %}
                     {% if site.author.twitter_username %}
                     <li><a href="https://twitter.com/{{ site.author.twitter_username }}" target="blank"><i class="fa fa-twitter"></i></a></li>
                     {% endif %}
@@ -53,6 +50,7 @@
                 <ul class="list-inline">
                     <li><a href="https://osf.io/pa6ku/" target="blank" title="OSF"><i class="ai ai-osf ai-2x" style="vertical-align: middle"></i></a></li>
                     <li><a href="https://orcid.org/0000-0002-6133-8756" target="blank" title="ORCID"><i class="ai ai-orcid ai-2x" style="vertical-align: middle"></i></a></li>
+					<li><a href="https://publons.com/researcher/1460182/matthias-franken/" target="blank" title="publons"><i class="ai ai-publons ai-2x" style="vertical-align: middle"></i></a></li>
                     <li><a href="https://www.researchgate.net/profile/Matthias_Franken" target="blank" title="ResearchGate"><i class="ai ai-researchgate ai-2x" style="vertical-align: middle;"></i></a></li>
                     <li><a href="https://scholar.google.be/citations?user=W8RcfMMAAAAJ&hl=en&oi=ao" target="blank" title="Google Scholar"><i class="ai ai-google-scholar ai-2x" style="vertical-align: middle;"></i></a></li>
                 </ul>
